--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src -- --ext .json",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "db:create": "node_modules/.bin/sequelize db:migrate"
   },
   "keywords": [
     "Node",
@@ -24,7 +25,11 @@
     "koa-router": "^9.0.1",
     "lodash": "^4.17.15",
     "log4js": "^6.3.0",
-    "require-all": "^3.0.0"
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "require-all": "^3.0.0",
+    "sequelize": "^6.2.3",
+    "sequelize-cli": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
