--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,5 +2,5 @@ const path = require('path')
 
 module.exports = {
   config: path.resolve(__dirname, 'configs', 'database.js'),
-  'migrations-path': path.resolve(__dirname, 'src', 'infra', 'database', 'migrations')
+  'migrations-path': path.resolve(__dirname, 'src', 'server', 'database', 'migrations')
 }
