--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "app-module-path": "^2.2.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
     "koa-router": "^9.0.1",
