--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
+    "koa-oas3": "^1.0.0",
     "koa-router": "^9.0.1",
     "lodash": "^4.17.15",
     "log4js": "^6.3.0",
@@ -30,7 +31,9 @@
     "pg-hstore": "^2.3.3",
     "require-all": "^3.0.0",
     "sequelize": "^6.2.3",
-    "sequelize-cli": "^6.1.0"
+    "sequelize-cli": "^6.1.0",
+    "swagger-parser": "^9.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
