--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --colors -require=dotenv/config --require @babel/register --require versions/v*/tests/helpers \"versions/v*/**/**/*@(.spec.js)\" --timeout 20000 --exit",
+    "test:watch": "npm run test -- --watch",
     "lint": "eslint ./src -- --ext .json",
     "lint:fix": "npm run lint -- --fix",
     "db:create": "node_modules/.bin/sequelize db:migrate"
@@ -23,6 +24,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-oas3": "^1.0.0",
     "koa-router": "^9.0.1",
     "lodash": "^4.17.15",
@@ -45,9 +47,16 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^7.3.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "mocha": "^8.0.1",
+    "sequelize-mock": "^0.10.2",
+    "sequelize-test-helpers": "^1.2.2",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   }
 }
