--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-router": "^9.0.1",
     "lodash": "^4.17.15",
     "log4js": "^6.3.0",
+    "node-schedule": "^1.3.2",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "require-all": "^3.0.0",
