--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "keywords": [
     "Node",
-    "koa",
-    "DDD"
+    "koa"
   ],
   "author": "Thiago Piva Magalhaes",
   "license": "ISC",
@@ -55,8 +54,6 @@
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-node": "^11.1.0",
     "mocha": "^8.0.1",
-    "sequelize-mock": "^0.10.2",
-    "sequelize-test-helpers": "^1.2.2",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2"
   }
