Add sequelize configs and seeders

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "npm run test -- --watch",
     "lint": "eslint ./src -- --ext .json",
     "lint:fix": "npm run lint -- --fix",
-    "db:create": "node_modules/.bin/sequelize db:migrate"
+    "db:create": "node_modules/.bin/sequelize db:migrate",
+    "db:seed": "sequelize-cli db:seed:all"
   },
   "keywords": [
     "Node",
