--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,5 +3,6 @@ const path = require('path')
 module.exports = {
   config: path.resolve(__dirname, 'configs', 'database.js'),
   'migrations-path': path.resolve(__dirname, 'server', 'database', 'migrations'),
-  'models-path': path.resolve(__dirname, 'server', 'database', 'models')
+  'models-path': path.resolve(__dirname, 'server', 'database', 'models'),
+  'seeders-path': path.resolve(__dirname, 'server', 'database', 'seeders')
 }
